reports/lekce/01-uvod-python.err.log
Traceback (most recent call last):
  File "C:\Users\jiral\AppData\Local\Programs\Python\Python310\lib\site-packages\jupyter_cache\executors\utils.py", line 58, in single_nb_execution
    executenb(
  File "C:\Users\jiral\AppData\Local\Programs\Python\Python310\lib\site-packages\nbclient\client.py", line 1269, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "C:\Users\jiral\AppData\Local\Programs\Python\Python310\lib\site-packages\nbclient\util.py", line 85, in wrapped
    return just_run(coro(*args, **kwargs))
  File "C:\Users\jiral\AppData\Local\Programs\Python\Python310\lib\site-packages\nbclient\util.py", line 60, in just_run
    return loop.run_until_complete(coro)
  File "C:\Users\jiral\AppData\Local\Programs\Python\Python310\lib\asyncio\base_events.py", line 646, in run_until_complete
    return future.result()
  File "C:\Users\jiral\AppData\Local\Programs\Python\Python310\lib\site-packages\nbclient\client.py", line 707, in async_execute
    await self.async_execute_cell(
  File "C:\Users\jiral\AppData\Local\Programs\Python\Python310\lib\site-packages\nbclient\client.py", line 1025, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "C:\Users\jiral\AppData\Local\Programs\Python\Python310\lib\site-packages\nbclient\client.py", line 919, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
import random

soucet = 0
while ???:
    print('Máš', soucet, 'bodů')
    odpoved = input('Otočit kartu? ')
    if odpoved == 'ano':
        ??? = random.randrange(2, 11)
        print('Otočil/a jsi', karta)
        soucet = ???
    elif ???:
        break
    else:
        ???

if soucet == 21:
    print('Gratuluji! Vyhrál/a jsi!')
???
    print('Smůla!', soucet, 'bodů je moc!')
else:
    print('Chybělo jen', 21 - soucet, 'bodů!')
------------------

[1;36m  Cell [1;32mIn [34], line 4[1;36m[0m
[1;33m    while ???:[0m
[1;37m          ^[0m
[1;31mSyntaxError[0m[1;31m:[0m invalid syntax

SyntaxError: invalid syntax (2489631272.py, line 4)

